# mcp-demo

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
client/: README.md
