[project]
name = "mcp-demo"
version = "0.1.0"
description = "Model Context Protocol demonstration with FastAPI"
authors = [{name = "Jeff Rade", email = "jeffrade@gmail.com"}]
requires-python = ">=3.11,<4.0"
dependencies = [
    "mcp[cli] (>=1,<2)",
    "fastapi[standard] (>=0.115,<1)",
    "fastmcp (>=2,<3)",
]

[tool.poetry]
package-mode = false

